@@ -769,7 +769,7 @@ public class JSONObject implements Serializable, Map {
         try {
             Object o = opt(key);
             return o instanceof Number ? ((Number)o).doubleValue() :
-                new Double((String)o).doubleValue();
+                Double.valueOf((String)o).doubleValue();
         } catch (Exception e) {
             return defaultValue;
         }
@@ -997,7 +997,7 @@ public class JSONObject implements Serializable, Map {
      */
 
     public JSONObject put(String key, double value)  {
-        _put(key, new Double(value));
+        _put(key, Double.valueOf(value));
         return this;
     }
 
@@ -1012,7 +1012,7 @@ public class JSONObject implements Serializable, Map {
      */
 
     public JSONObject put(String key, int value)  {
-        _put(key, new Integer(value));
+        _put(key, Integer.valueOf(value));
 
         return this;
     }
@@ -1028,7 +1028,7 @@ public class JSONObject implements Serializable, Map {
      */
 
     public JSONObject put(String key, long value)  {
-        _put(key, new Long(value));
+        _put(key, Long.valueOf(value));
         return this;
     }
 
@@ -1238,7 +1238,7 @@ public class JSONObject implements Serializable, Map {
             if (b == '0' && s.length() > 2 &&
                         (s.charAt(1) == 'x' || s.charAt(1) == 'X')) {
                 try {
-                    return new Integer(Integer.parseInt(s.substring(2), 16));
+                    return Integer.valueOf(Integer.parseInt(s.substring(2), 16));
                 } catch (Exception ignore) {
                 }
             }
@@ -1247,9 +1247,9 @@ public class JSONObject implements Serializable, Map {
                 		s.indexOf('e') > -1 || s.indexOf('E') > -1) {
                     return Double.valueOf(s);
                 } else {
-                    Long myLong = new Long(s);
+                    Long myLong = Long.valueOf(s);
                     if (myLong.longValue() == myLong.intValue()) {
-                        return new Integer(myLong.intValue());
+                        return Integer.valueOf(myLong.intValue());
                     } else {
                         return myLong;
                     }
